# projeto-streamlit

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
pages/: Consulta.py
