[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["kimmel711 <kimmel711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
